--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -40,3 +41,48 @@
 .read-the-docs {
   color: #888;
 }
+
+.cell{
+  display: flex;
+  outline: 1px solid rgba(105, 105, 105, 0.5);
+  min-height: 90px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header{
+  display: flex;
+  outline: 1px solid rgba(105, 105, 105, 0.5);
+  min-height: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+.cell::after{
+  content: '';
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  min-height: 100px;
+  z-index: 10;
+}
+
+.column{
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.timetable{
+  position: relative;
+  display: grid;
+  width: 100%;
+  height: 100%;
+
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+
+  @media screen and (max-width: 800px){
+    grid-template-columns: minmax(0, 1fr);
+  }
+}
+
