--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #101010;
 }
 
 body {
@@ -14,4 +14,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+div{
+  flex-grow: 1;
 }
