--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 .cell{
   display: flex;
   outline: 1px solid rgba(105, 105, 105, 0.5);
-  min-height: 90px;
+  min-height: 120px;
   justify-content: center;
   align-items: center;
 }
@@ -56,6 +56,7 @@
 }
 
 .column{
+  position: relative;
   width: 100%;
   height: 100%;
 }
