--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #101010;
@@ -10,10 +9,13 @@
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+#root{
+  height: 100vh;
 }
 
 .MuiAccordionSummary-expandIconWrapper{
@@ -23,6 +25,7 @@ body {
 div{
   flex-grow: 1;
 }
+
 /*
 *{
     -ms-overflow-style: none;
